Changed dev logo link to site.baseurl.

--- a/_includes/topnavdev.html
+++ b/_includes/topnavdev.html
@@ -10,7 +10,7 @@
 <div class="navbar navbar-default navbar-secondary" style="margin-bottom: 5px">
 	 <div class="container">
             <ul class="nav navbar-nav">
-                <li><a href="{{ "/index/" | prepend: site.baseurl }}"><img height=18px src="{{site.baseurl}}/images/devlogo.png"></a>
+                <li><a href=""><img height=18px src="{{site.baseurl}}/images/devlogo.png"></a>
                 </li>						
 			    <li {% if page.sectionid=='getstarted' %} class="active" {% endif %}>
 				  <a href="{{ "/getstarted/index/" | prepend: site.baseurl }}">Getting Started</a>
