--- a/_includes/download_nav.html
+++ b/_includes/download_nav.html
@@ -1,19 +1,17 @@
 <p style="font-weight: 400; margin-left: 13px; color: #38307f; font-size: 14px;">Download</p>
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-          {% assign item_url = item | prepend:"/download/" | append:"/" %}
-          {% assign p = site.download | where:"url", item_url | first %}	  
-          <a class="list-group-item {% if item_url == page.url %}active{% endif %}" href="{{ "/download/index/"  | prepend: site.baseurl }}">Overview</a>
-		  <div style="padding-bottom: 6px"></div>
 {% for section in site.data.download %}
   <div class="panel panel-default">
+{% if section.title != "None" %}   
     <div class="panel-heading">
       <h4 class="panel-title">
         <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse-{{forloop.index}}" aria-expanded="false" aria-controls="collapse-{{forloop.index}}">
           {{ section.title }}
         </a>
       </h4>
-    </div>
+    </div>	
     <div id="collapse-{{forloop.index}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+{% endif %}	
       <ul class="list-group">
         {% for item in section.download %}
           {% assign item_url = item | prepend:"/download/" | append:"/" %}
@@ -21,7 +19,9 @@
           <a class="list-group-item {% if item_url == page.url %}active{% endif %}" href="{{ p.url  | prepend: site.baseurl }}">{{ p.title }}</a>
         {% endfor %}
       </ul>
+{% if section.title != "None" %}	  
     </div>
+{% endif %}	
   </div>
 {% endfor %}
 </div>
