--- a/_includes/topnavdev.html
+++ b/_includes/topnavdev.html
@@ -13,28 +13,28 @@
                 <li><a href=""><img height=18px src="{{site.baseurl}}/images/devlogo.png"></a>
                 </li>						
 			    <li {% if page.sectionid=='getstarted' %} class="active" {% endif %}>
-				  <a href="{{ "/getstarted/index/" | prepend: site.baseurl }}">Getting Started</a>
+				  <a href="{{ "/getstarted/overview/" | prepend: site.baseurl }}">Getting Started</a>
 				</li>
 				<li {% if page.sectionid=='reference' %} class="active" {% endif %}>
-				  <a href="{{ "/reference/index/" | prepend: site.baseurl }}">Reference</a>
+				  <a href="{{ "/reference/overview/" | prepend: site.baseurl }}">Reference</a>
 				</li>	
 				<li {% if page.sectionid=='source' %} class="active" {% endif %}>
-				  <a href="{{ "/source/index/" | prepend: site.baseurl }}">Code</a>
+				  <a href="{{ "/source/overview/" | prepend: site.baseurl }}">Code</a>
 				</li>
 			    <li {% if page.sectionid=='devguides' %} class="active" {% endif %}>
-				  <a href="{{ "/devguides/index/" | prepend: site.baseurl }}">Guides</a>
+				  <a href="{{ "/devguides/overview/" | prepend: site.baseurl }}">Guides</a>
 				</li>					
 				<li {% if page.sectionid=='download' %} class="active" {% endif %}>
-				  <a href="{{ "/download/index/" | prepend: site.baseurl }}">Download</a>
+				  <a href="{{ "/download/overview/" | prepend: site.baseurl }}">Download</a>
 				</li>
 				<li {% if page.sectionid== 'tutorials' %} class="active" {% endif %}>
-				   <a href="{{ "/tutorials/index/" | prepend: site.baseurl }}">Tutorials</a>
+				   <a href="{{ "/tutorials/overview/" | prepend: site.baseurl }}">Tutorials</a>
 				</li>				
 				<li {% if page.sectionid=='devtools' %} class="active" {% endif %}>
-				  <a href="{{ "/devtools/index/" | prepend: site.baseurl }}">Tools</a>
+				  <a href="{{ "/devtools/overview/" | prepend: site.baseurl }}">Tools</a>
 				</li>				
 				<li {% if page.sectionid=='guidelines' %} class="active" {% endif %}>
-				  <a href="{{ "/guidelines/index/" | prepend: site.baseurl }}">Guidelines</a>
+				  <a href="{{ "/guidelines/overview/" | prepend: site.baseurl }}">Guidelines</a>
 				</li>					
             </ul>	
            <div class="navbar-right">
