--- a/assets/main.scss
+++ b/assets/main.scss
@@ -105,10 +105,6 @@ ul, ol {
 	padding-left: 15px;
 }
 
-a {
-    color: #1756a9;
-}
-
 .btn {
     text-transform: uppercase;
     border: none;
@@ -128,6 +124,27 @@ a {
     color: #fff;
     background-color: #d75922;
     border-color: #d75922;
+}
+
+.panel-title > a {
+   text-decoration: none;
+   color: #555;
+}
+
+.panel-title > a:visited {
+   color: #555;
+}
+
+a.list-group-item:visited {
+   color: #555;
+}
+
+.panel-title > a:hover {
+	color: #111;
+}
+
+a.list-group-item.active {
+   color: #fff;
 }
 
 :target {
