--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -10,16 +10,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
-                  <li {% if page.sectionid=='folio' %} class="active" {% endif %}><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img height=18px src="{{site.baseurl}}/images/logonav.png"><span class="caret"></span></a>
-                       <ul class="dropdown-menu">
-		                 <li><a href="{{site.foliourl}}">About</a></li>
-			             <li><a href="{{site.roadmapurl}}">Platform & Roadmap</a></li>
-			             <li><a href="{{ "/news/" | prepend: site.foliourl }}">News</a></li>
-                         <li><a href="https://trello.com/b/A27ucwg8/events">Events</a></li>
-                         <li><a href="https://www.folio.org/community/">Join the Community</a></li>
-                       </ul>				
-				   </li>			
-               </ul>
+			      <li {% if page.sectionid =='folio' %} class="active" {% endif %}><a href="{{site.foliourl}}"><img height=18px src="{{site.baseurl}}/images/logonav.png"></a>
+              </ul>
 <!-- Not using right now			
                 <form class="navbar-form navbar-left">
                     <div class="form-group has-feedback">
@@ -29,22 +21,33 @@
                 </form>
 -->				
                 <ul class="nav navbar-nav navbar-right">
-                    <li {% if page.sectionid=='docs' %} class="active" {% endif %}>
-                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Developers<span class="caret"></span></a>
-                           <ul class="dropdown-menu">
+                    <li {% if page.sectionid=='overview' %} class="active" {% endif %}>
+                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Overview&nbsp;<span class="caret"></span></a>	
+                       <ul class="dropdown-menu">
+		                 <li><a href="{{site.foliourl}}">About</a></li>
+			             <li><a href="{{site.roadmapurl}}">Platform & Roadmap</a></li>
+						 <li><a href="https://www.folio.org/customization-hosting/">Customization & Hosting</a></li>
+                         <li><a href="https://trello.com/b/A27ucwg8/events">News & Events</a></li>
+                         <li><a href="https://www.folio.org/community/">Community</a></li>
+						 <li><a href="{{ site.discussurl }}">Resources</a></li>
+                       </ul>							   
+				    </li>				
+                    <li {% if page.sectionid=='developers' %} class="active" {% endif %}>
+                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Developers&nbsp;<span class="caret"></span></a>
+                       <ul class="dropdown-menu">
                              <li><a href="{{ "/index" | prepend: site.baseurl }}">Documentation</a></li>
-			                 <li><a href="{{ "/source/index" | prepend: site.baseurl }}">Source Code</a></li>
+			                 <li><a href="{{ "/source/overview" | prepend: site.baseurl }}">Source Code</a></li>
 					         <li><a href="https://folio-project.slack.com/messages/">Chat</a></li>
 					         <li><a href="https://slack-invitation.folio.org/">Chat (Sign Up)</a></li>
                              <li><a href="{{ site.issuesurl }}">Tracker</a></li>
-                           </ul>						
+                        </ul>						
 				    </li>	
-				<li {% if page.sectionid=='community' %} class="active" {% endif %}>
-				  <a href="{{site.wikiurl}}">Project Wiki</a>
-				</li>				
-				<li {% if page.sectionid=='news' %} class="active" {% endif %}>
-				  <a href="{{ site.discussurl }}">Discussion Boards</a>
-				</li>						
+				    <li {% if page.sectionid=='community' %} class="active" {% endif %}>
+				        <a href="{{site.wikiurl}}">Project Wiki</a>
+				    </li>				
+				    <li {% if page.sectionid=='news' %} class="active" {% endif %}>
+				        <a href="{{ site.discussurl }}">Discussion Boards</a>
+				    </li>						
  <!-- Not using                   <li><a href="{{ site.git_address }}"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 				  <span><img height="22" width="22" style="margin-top: 12px; margin-right: 50px; margin-left: 15px; margin-bottom: 10px;" src="{{site.baseurl}}/images/github.png"></span>
 -->				  
