Use "Overview" menu in top nav FOLIO-714

--- a/_includes/folio-navbar.html
+++ b/_includes/folio-navbar.html
@@ -1,13 +1,25 @@
 <nav class="navbanner-menu">
   <ul>
     <li>
+      <input type="checkbox" id="f0-checkbox">
+      <label for="f0-checkbox">
+        <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
+        <div class="menu-item">
+          <div class="menu-item-symbol"><p><!-- will be filled by disclosure indicator --></p></div>
+          <div class="menu-item-title">
+            <a href="https://www.folio.org/"><p>FOLIO</p></a>
+          </div>
+        </div>
+      </label>
+    </li>
+    <li>
       <input type="checkbox" id="f1-checkbox">
       <label for="f1-checkbox">
         <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
         <div class="menu-item">
           <div class="menu-item-symbol"><p><!-- will be filled by disclosure indicator --></p></div>
           <div class="menu-item-title">
-            <p>FOLIO.org</p></a>
+            <p>Overview</p>
           </div>
         </div>
       </label>
@@ -24,7 +36,7 @@
           <div class="menu-subitem">
             <div class="menu-subitem-symbol"></div>
             <div class="menu-subitem-title">
-              <a href="https://wiki.folio.org/display/PC/FOLIO+Roadmap"><p>Platform and Roadmap</p></a>
+              <a href="https://wiki.folio.org/display/PC/FOLIO+Roadmap"><p>Platform &amp; Roadmap</p></a>
             </div>
           </div>
         </li>
@@ -32,7 +44,7 @@
           <div class="menu-subitem">
             <div class="menu-subitem-symbol"></div>
             <div class="menu-subitem-title">
-              <a href="https://folio.org/news/"><p>News</p></a>
+              <a href="https://folio.org/customization-hosting/"><p>Customization &amp; Hosting</p></a>
             </div>
           </div>
         </li>
@@ -40,7 +52,7 @@
           <div class="menu-subitem">
             <div class="menu-subitem-symbol"></div>
             <div class="menu-subitem-title">
-              <a href="https://www.openlibraryenvironment.org/archives/category/olfforum"><p>Events</p></a>
+              <a href="https://trello.com/b/A27ucwg8/events"><p>News &amp; Events</p></a>
             </div>
           </div>
         </li>
@@ -48,7 +60,15 @@
           <div class="menu-subitem">
             <div class="menu-subitem-symbol"></div>
             <div class="menu-subitem-title">
-              <a href="https://www.folio.org/community/"><p>Join the Community</p></a>
+              <a href="https://www.folio.org/community/"><p>Community</p></a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="menu-subitem">
+            <div class="menu-subitem-symbol"></div>
+            <div class="menu-subitem-title">
+              <a href="https://discuss.folio.org"><p>Resources</p></a>
             </div>
           </div>
         </li>
@@ -61,7 +81,7 @@
         <div class="menu-item">
           <div class="menu-item-symbol"><p><!-- will be filled by disclosure indicator --></p></div>
           <div class="menu-item-title">
-            <p>Developers</p></a>
+            <p>Developers</p>
           </div>
         </div>
       </label>
