--- a/_includes/topnavdev.html
+++ b/_includes/topnavdev.html
@@ -1,48 +1,56 @@
-   <div class="header-container-page" style="background-color:#d75922">
+<!-- Top/Secondary divider -->
+<div class="header-container-page" style="background-color:#d75922">
    <div class="container">
-    <div class="row">
+      <div class="row">
         <div class="col-sm-12"> 
-		&nbsp;<br>
+		   &nbsp;<br>
 		</div>
-    </div>		
-    </div>		
-    </div>	
-<div class="navbar navbar-default navbar-secondary" style="margin-bottom: 5px">
-	 <div class="container">
-            <ul class="nav navbar-nav">
-                <li><a href=""><img height=18px src="{{site.baseurl}}/images/devlogo.png"></a>
-                </li>	
-            </ul>	
-            <ul class="nav navbar-nav navbar-right">			
-			    <li {% if page.sectionid=='getstarted' %} class="active" {% endif %}>
-				  <a href="{{ "/getstarted/overview/" | prepend: site.baseurl }}">Getting Started</a>
-				</li>
-				<li {% if page.sectionid=='reference' %} class="active" {% endif %}>
-				  <a href="{{ "/reference/overview/" | prepend: site.baseurl }}">Reference</a>
-				</li>	
-				<li {% if page.sectionid=='source' %} class="active" {% endif %}>
-				  <a href="{{ "/source/overview/" | prepend: site.baseurl }}">Code</a>
-				</li>
-			    <li {% if page.sectionid=='devguides' %} class="active" {% endif %}>
-				  <a href="{{ "/devguides/overview/" | prepend: site.baseurl }}">Guides</a>
-				</li>					
-				<li {% if page.sectionid=='download' %} class="active" {% endif %}>
-				  <a href="{{ "/download/overview/" | prepend: site.baseurl }}">Download</a>
-				</li>
-				<li {% if page.sectionid== 'tutorials' %} class="active" {% endif %}>
-				   <a href="{{ "/tutorials/overview/" | prepend: site.baseurl }}">Tutorials</a>
-				</li>				
-				<li {% if page.sectionid=='devtools' %} class="active" {% endif %}>
-				  <a href="{{ "/devtools/overview/" | prepend: site.baseurl }}">Tools</a>
-				</li>				
-				<li {% if page.sectionid=='guidelines' %} class="active" {% endif %}>
-				  <a href="{{ "/guidelines/overview/" | prepend: site.baseurl }}">Guidelines</a>
-				</li>
-				<li>
-                   <img height="22" width="22" style="margin-top: 12px; margin-right: 15px; margin-left: 10px; margin-bottom: 10px;" src="{{site.baseurl}}/images/github.png">				
-                </li>
-            </ul>	
-        </div>	
-	
-	</div>
-</div>
+      </div>		
+   </div>		
+</div>	
+<!--- Secondary Navigation Bar -->
+<nav class="navbar navbar-default navbar-secondary" style="margin-bottom: 5px">
+	 <div class="container"> 	 
+          <!-- Toggle for secondary navbar --> 		  
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar2" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+			<a class="navbar-brand" href=""><img height=18px src="{{site.baseurl}}/images/devlogo.png" ></a>
+          </div>			  
+		  <div id="navbar2" class="collapse navbar-collapse">		  
+               <ul class="nav navbar-nav navbar-right">			
+					<li {% if page.sectionid=='getstarted' %} class="active" {% endif %}>
+					  <a href="{{ "/getstarted/overview/" | prepend: site.baseurl }}">Getting Started</a>
+					</li>
+					<li {% if page.sectionid=='reference' %} class="active" {% endif %}>
+					  <a href="{{ "/reference/overview/" | prepend: site.baseurl }}">Reference</a>
+					</li>	
+					<li {% if page.sectionid=='source' %} class="active" {% endif %}>
+					  <a href="{{ "/source/overview/" | prepend: site.baseurl }}">Code</a>
+					</li>
+					<li {% if page.sectionid=='devguides' %} class="active" {% endif %}>
+					  <a href="{{ "/devguides/overview/" | prepend: site.baseurl }}">Guides</a>
+					</li>					
+					<li {% if page.sectionid=='download' %} class="active" {% endif %}>
+					  <a href="{{ "/download/overview/" | prepend: site.baseurl }}">Download</a>
+					</li>
+					<li {% if page.sectionid== 'tutorials' %} class="active" {% endif %}>
+					   <a href="{{ "/tutorials/overview/" | prepend: site.baseurl }}">Tutorials</a>
+					</li>				
+					<li {% if page.sectionid=='devtools' %} class="active" {% endif %}>
+					  <a href="{{ "/devtools/overview/" | prepend: site.baseurl }}">Tools</a>
+					</li>				
+					<li {% if page.sectionid=='guidelines' %} class="active" {% endif %}>
+					  <a href="{{ "/guidelines/overview/" | prepend: site.baseurl }}">Guidelines</a>
+					</li>
+					<li>
+					   <img height="22" width="22" style="margin-top: 12px; margin-right: 0px; margin-left: 10px; margin-bottom: 10px;" src="{{site.baseurl}}/images/github.png">				
+					</li>
+                </ul>
+           </div>	
+       </div>
+</nav>
