Insert our top nav bar into banner-area
and update our content for cjt-v2

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -34,13 +34,6 @@ tr:target td:first-child {
   border-left: 5px solid $f-color-orange;
 }
 
-// Reduce vertical whitespace
-.page-title {
-  text-align: center;
-  margin-top: $vspacing-unit;
-  margin-bottom: $vspacing-unit;
-}
-
 // Set our link and visited colors
 a {
   color: $f-link-color;
@@ -66,4 +59,9 @@ form {
 }
 form input {
   font-size: 1.3em;
+}
+nav.folio {
+  div.dropdown {
+    z-index: 9;
+  }
 }
