--- a/_includes/folio-navbar.html
+++ b/_includes/folio-navbar.html
@@ -1,156 +1,158 @@
-<nav class="navbanner-menu">
-  <ul>
-    <li>
-      <input type="checkbox" id="f0-checkbox">
-      <label for="f0-checkbox">
-        <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
-        <div class="menu-item">
-          <div class="menu-item-symbol"><p><!-- will be filled by disclosure indicator --></p></div>
-          <div class="menu-item-title">
-            <a href="https://www.folio.org/"><p>FOLIO</p></a>
+<nav class="menubar folio">
+  <div class="item">
+    <input type="checkbox" id="f0-checkbox">
+    <div class="title">
+      <label class="symbol" for="f0-checkbox"><p></p></label>
+      <div class="text">
+        <a href="https://www.folio.org/"><p>FOLIO</p></a>
+      </div>
+    </div>
+  </div>
+  <div class="item-separator"><p></p></div>
+  <div class="item">
+    <input type="checkbox" id="f1-checkbox">
+    <div class="title">
+      <label class="symbol" for="f1-checkbox">
+        <p class="code"><!-- will be filled by disclosure indicator --></p>
+      </label>
+      <div class="text">
+        <a href="https://www.folio.org/"><p>Overview</p></a>
+      </div>
+    </div>
+    <div class="dropdown">
+      <div class="subitem-separator"><p></p></div>
+      <div class="subitem">
+        <div class="title">
+          <div class="symbol"><p></p></div>
+          <div class="text">
+            <a href="https://www.folio.org/"><p>About</p></a>
           </div>
         </div>
-      </label>
-    </li>
-    <li>
-      <input type="checkbox" id="f1-checkbox">
-      <label for="f1-checkbox">
-        <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
-        <div class="menu-item">
-          <div class="menu-item-symbol"><p><!-- will be filled by disclosure indicator --></p></div>
-          <div class="menu-item-title">
-            <p>Overview</p>
+      </div>
+      <div class="subitem-separator"><p></p></div>
+      <div class="subitem">
+        <div class="title">
+          <div class="symbol"><p></p></div>
+          <div class="text">
+            <a href="https://wiki.folio.org/display/PC/FOLIO+Roadmap"><p>Platform &amp; Roadmap</p></a>
           </div>
         </div>
-      </label>
-      <ul>
-        <li>
-          <div class="menu-subitem">
-            <div class="menu-subitem-symbol"></div>
-            <div class="menu-subitem-title">
-              <a href="https://www.folio.org/"><p>About</p></a>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="menu-subitem">
-            <div class="menu-subitem-symbol"></div>
-            <div class="menu-subitem-title">
-              <a href="https://wiki.folio.org/display/PC/FOLIO+Roadmap"><p>Platform &amp; Roadmap</p></a>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="menu-subitem">
-            <div class="menu-subitem-symbol"></div>
-            <div class="menu-subitem-title">
-              <a href="https://folio.org/customization-hosting/"><p>Customization &amp; Hosting</p></a>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="menu-subitem">
-            <div class="menu-subitem-symbol"></div>
-            <div class="menu-subitem-title">
-              <a href="https://trello.com/b/A27ucwg8/events"><p>News &amp; Events</p></a>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="menu-subitem">
-            <div class="menu-subitem-symbol"></div>
-            <div class="menu-subitem-title">
-              <a href="https://www.folio.org/community/"><p>Community</p></a>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="menu-subitem">
-            <div class="menu-subitem-symbol"></div>
-            <div class="menu-subitem-title">
-              <a href="https://discuss.folio.org"><p>Resources</p></a>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </li>
-    <li>
-      <input type="checkbox" id="f2-checkbox">
-      <label for="f2-checkbox">
-        <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
-        <div class="menu-item">
-          <div class="menu-item-symbol"><p><!-- will be filled by disclosure indicator --></p></div>
-          <div class="menu-item-title">
-            <p>Developers</p>
+      </div>
+      <div class="subitem-separator"><p></p></div>
+      <div class="subitem">
+        <div class="title">
+          <div class="symbol"><p></p></div>
+          <div class="text">
+            <a href="https://folio.org/customization-hosting/"><p>Customization &amp; Hosting</p></a>
           </div>
         </div>
-      </label>
-      <ul>
-        <li>
-          <div class="menu-subitem">
-            <div class="menu-subitem-symbol"></div>
-            <div class="menu-subitem-title">
-              <a href="http://dev.folio.org/doc/"><p>Documentation</p></a>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="menu-subitem">
-            <div class="menu-subitem-symbol"></div>
-            <div class="menu-subitem-title">
-              <a href="http://dev.folio.org/source-code/"><p>Source Code</p></a>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="menu-subitem">
-            <div class="menu-subitem-symbol"></div>
-            <div class="menu-subitem-title">
-              <a href="https://folio-project.slack.com/"><p>Chat</p></a>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="menu-subitem">
-            <div class="menu-subitem-symbol"></div>
-            <div class="menu-subitem-title">
-              <a href="https://slack-invitation.folio.org/"><p>Chat (Sign Up)</p></a>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="menu-subitem">
-            <div class="menu-subitem-symbol"></div>
-            <div class="menu-subitem-title">
-              <a href="https://issues.folio.org/"><p>Issue Tracker</p></a>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </li>
-    <li>
-      <input type="checkbox" id="f3-checkbox">
-      <label for="f3-checkbox">
-        <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
-        <div class="menu-item">
-          <div class="menu-item-symbol"></div>
-          <div class="menu-item-title">
-            <a href="https://wiki.folio.org/"><p>Project Wiki</p></a>
+      </div>
+      <div class="subitem-separator"><p></p></div>
+      <div class="subitem">
+        <div class="title">
+          <div class="symbol"><p></p></div>
+          <div class="text">
+            <a href="https://trello.com/b/A27ucwg8/events"><p>News &amp; Events</p></a>
           </div>
         </div>
-      </label>
-    </li>
-    <li>
-      <input type="checkbox" id="f4-checkbox">
-      <label for="f4-checkbox">
-        <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
-        <div class="menu-item">
-          <div class="menu-item-symbol"></div>
-          <div class="menu-item-title">
-            <a href="https://discuss.folio.org/"><p>Discussion Boards</p></a>
+      </div>
+      <div class="subitem-separator"><p></p></div>
+      <div class="subitem">
+        <div class="title">
+          <div class="symbol"><p></p></div>
+          <div class="text">
+            <a href="https://www.folio.org/community/"><p>Community</p></a>
           </div>
         </div>
+      </div>
+      <div class="subitem-separator"><p></p></div>
+      <div class="subitem">
+        <div class="title">
+          <div class="symbol"><p></p></div>
+          <div class="text">
+            <a href="https://discuss.folio.org"><p>Resources</p></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="item-separator"><p></p></div>
+  <div class="item">
+    <input type="checkbox" id="f2-checkbox">
+    <div class="title">
+      <label class="symbol" for="f2-checkbox">
+        <p class="code"><!-- will be filled by disclosure indicator --></p>
       </label>
-    </li>
-  </ul>
+      <div class="text">
+        <a href="http://dev.folio.org/"><p>Developers</p></a>
+      </div>
+    </div>
+    <div class="dropdown">
+      <div class="subitem-separator"><p></p></div>
+      <div class="subitem">
+        <div class="title">
+          <div class="symbol"><p></p></div>
+          <div class="text">
+            <a href="http://dev.folio.org/doc/"><p>Documentation</p></a>
+          </div>
+        </div>
+      </div>
+      <div class="subitem-separator"><p></p></div>
+      <div class="subitem">
+        <div class="title">
+          <div class="symbol"><p></p></div>
+          <div class="text">
+            <a href="http://dev.folio.org/source-code/"><p>Source Code</p></a>
+          </div>
+        </div>
+      </div>
+      <div class="subitem-separator"><p></p></div>
+      <div class="subitem">
+        <div class="title">
+          <div class="symbol"><p></p></div>
+          <div class="text">
+            <a href="https://folio-project.slack.com/"><p>Chat</p></a>
+          </div>
+        </div>
+      </div>
+      <div class="subitem-separator"><p></p></div>
+      <div class="subitem">
+        <div class="title">
+          <div class="symbol"><p></p></div>
+          <div class="text">
+            <a href="https://slack-invitation.folio.org/"><p>Chat (Sign Up)</p></a>
+          </div>
+        </div>
+      </div>
+      <div class="subitem-separator"><p></p></div>
+      <div class="subitem">
+        <div class="title">
+          <div class="symbol"><p></p></div>
+          <div class="text">
+            <a href="https://issues.folio.org/"><p>Issue Tracker</p></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="item-separator"><p></p></div>
+  <div class="item">
+    <input type="checkbox" id="f3-checkbox">
+    <div class="title">
+      <label class="symbol" for="f3-checkbox"><p></p></label>
+      <div class="text">
+        <a href="https://wiki.folio.org/"><p>Project Wiki</p></a>
+      </div>
+    </div>
+  </div>
+  <div class="item-separator"><p></p></div>
+  <div class="item">
+    <input type="checkbox" id="f4-checkbox">
+    <div class="title">
+      <label class="symbol" for="f4-checkbox"><p></p></label>
+      <div class="text">
+        <a href="https://discuss.folio.org/"><p>Discussion Boards</p></a>
+      </div>
+    </div>
+  </div>
 </nav>
