--- a/_includes/secondary-column.html
+++ b/_includes/secondary-column.html
@@ -1,10 +1,13 @@
-<!-- This widget divider will only show up in the narrow layout -->
+
+<!-- include secondary-column.html -->
+{%- comment -%}<!-- This widget divider will only show up in the narrow layout -->{%- endcomment %}
 <div class="secondary-widget-divider"></div>
 
-{%- if site.data.setup.drop-down-menu -%}{%- else -%}
+{%- if site.data.setup.drop-down-menu -%}{%- else %}
 <div class="widget-divider"></div>
-{%- endif -%}
+{%- endif %}
 
-<div class="widget">{%- include widgets/social-media.html -%}</div>
-
-<div class="widget-divider"></div>
+<div class="widget">
+{% include widgets/social-media.html %}
+</div>
+<!-- end of include secondary-column.html -->
