Use our highlight color for code

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -1,6 +1,9 @@
 .highlighter-rouge pre.highlight {
   background-color: $f-color-lighter-grey;
 }
+code.highlighter-rouge {
+  background-color: $f-color-lighter-grey;
+}
 
 pre {
   border: 1px solid $f-color-light-grey;
