Use fresh copies of theme files cjt-v2.0.0

--- a/_includes/column-2-search.html
+++ b/_includes/column-2-search.html
@@ -1,7 +1,7 @@
 
 <!-- include tertiary-column.html -->
-{%- comment -%}<!-- This widget divider will only show up when the tertiary column content is merged into the secondary column-->{%- endcomment %}
-<div class="tertiary-widget-divider"></div>
+{%- comment -%}<!-- This widget separator will only show up when the tertiary column content is merged into the secondary column-->{%- endcomment %}
+<div class="tertiary-widget-separator"></div>
 <div>
   <p>Search terms are combined with 'AND'.</p>
   <p>Using <a href="https://github.com/bvaughn/js-search">js-search</a>.</p>
