--- a/_includes/secondary-column.html
+++ b/_includes/secondary-column.html
@@ -1,10 +1,10 @@
 
 <!-- include secondary-column.html -->
-{%- comment -%}<!-- This widget divider will only show up in the narrow layout -->{%- endcomment %}
-<div class="secondary-widget-divider"></div>
+{%- comment -%}<!-- This widget separator will only show up in the narrow layout -->{%- endcomment %}
+<div class="secondary-widget-separator"></div>
 
 {%- if site.data.setup.drop-down-menu -%}{%- else %}
-<div class="widget-divider"></div>
+<div class="widget-separator"></div>
 {%- endif %}
 
 <div class="widget">
