--- a/_includes/banner-area.html
+++ b/_includes/banner-area.html
@@ -34,6 +34,9 @@ If changes are made to this file that increase the height of the banner-area tha
 	<div class="label-container"><label for="banner-menu-symbol"><p><!-- empty but necessary! --></p></label></div>
 	{%- comment -%}<!-- This is part of the DOM again (unless the banner area is outside the DOM) -->{%- endcomment %}
 	<div class="menubar-top-separator"></div>
+	<!-- Include FOLIO top-level navigation bar -->
+	{%- include folio-navbar.html -%}
+	<div class="menubar-bottom-separator"></div>
 	{% include menubar.html %}
 	<div class="menubar-bottom-separator"></div>
 </div>
