--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,11 +7,13 @@ layout: default
 		<p class="page-meta">{%- if page.date -%}<time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%F" }}</time>{%- endif -%}{%- if page.author -%} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{%- endif -%}</p>
 	</header>
 	<div class="page-content" itemprop="articleBody">
+          <div class="js-toc-content">
   
 <!-- Page content -->
    {{ content }}
 <!-- End of page content -->
 
+          </div>
 	</div>
 {%- if site.disqus.shortname -%}
 	{% include disqus-comments.html %}
