--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -18,4 +18,5 @@ layout: default
 {%- if site.disqus.shortname -%}
 	{% include disqus-comments.html %}
 {%- endif %}
+{% include js-content.html %}
 </article>
