--- a/_includes/secondary-column.html
+++ b/_includes/secondary-column.html
@@ -10,4 +10,9 @@
 <div class="widget">
 {% include widgets/social-media.html %}
 </div>
+
+<div class="widget-separator"></div>
+<div id="js-toc-wrapper" class="toc js-toc">
+  <nav/>
+</div>
 <!-- end of include secondary-column.html -->
