Add FOLIO style for tocbot FOLIO-978

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -68,3 +68,10 @@ nav.folio {
     z-index: 9;
   }
 }
+/* tocbot */
+#js-toc-wrapper {
+  background-color: $f-color-lighter-grey;
+}
+a.is-active-link::before {
+  background-color: $f-color-orange;
+}
