Add padding to footer
Until find better way to reach bottom menu items.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,4 +4,5 @@
       &copy; 2017 The Open Library Foundation
     </p>
   </div>
+  <div id="folio-spacer" style="padding-bottom: 50em;"></div>
 </footer>
