--- a/_includes/js-content.html
+++ b/_includes/js-content.html
@@ -3,4 +3,9 @@
     headingSelector: 'h1, h2, h3',
     positionFixedSelector: '#js-toc-wrapper'
   });
+$(function() {
+  if ( $('#js-toc-wrapper ul:first li').length > 0 ) {
+    $('#js-toc-wrapper ul:first').prepend('<li class="toc-list-item"><a class="toc-link" href="">Top</a></li>');
+  }
+});
 </script>
