--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div>
     <p>
-      &copy; 2017 The Open Library Foundation
+      &copy; 2016-2018 The Open Library Foundation
     </p>
   </div>
 </footer>
