--- a/_layouts/guides.html
+++ b/_layouts/guides.html
@@ -1,5 +1,5 @@
 ---
-layout: defaultdev
+layout: multipagedev
 ---
 
 <div class="container">
@@ -9,7 +9,7 @@ layout: defaultdev
         </div>
 
         <div class="col-md-8">
-            <div id="markdown-content-container">{{ content }}</div>
+            <div id="markdown-content-container"><div class="js-toc-content">{{ content }}</div></div>
             <br>
             <hr>
            <!-- {% include section_guides_nav.html %} -->
