--- a/_includes/download_nav.html
+++ b/_includes/download_nav.html
@@ -1,14 +1,13 @@
 <ul id=menu>
 <li>
  <ul id=submenu>
- <li><p style="padding-left: 10px; font-weight: 400; color: #38307f; font-size: 15px; text-transform: none;">Download<p></li>
 {% for section in site.data.download %}
         {% for item in section.download %}
           {% assign item_url = item | prepend:"/download/" | append:"/" %}
           {% assign p = site.download | where:"url", item_url | first %}
 		  {% if item_url == page.url %}
-          <div id="toc">
-          </div>		  
+		  <div id="js-toc-fixed" class="toc js-toc">
+		  </div>		  
 		  {% else %}
           <li><a id=subsubmenu href="{{ item_url | prepend: site.baseurl }}">{{ section.title }}</a></li>
 		  {% endif %}		  
