--- a/_includes/getstarted_nav.html
+++ b/_includes/getstarted_nav.html
@@ -1,19 +1,16 @@
-<ul id=menu>
-<li>
- <ul id=submenu>
- <li><p style="padding-left: 10px; font-weight: 400; color: #38307f; font-size: 15px; text-transform: none;">Getting Started<p></li>
+
+
 {% for section in site.data.getstarted %}
         {% for item in section.getstarted %}
           {% assign item_url = item | prepend:"/getstarted/" | append:"/" %}
           {% assign p = site.getstarted | where:"url", item_url | first %}
-		  {% if item_url == page.url %}
-          <div id="toc">
-          </div>		  
+		  {% if item_url == page.url %}	
+			<div id="js-toc-fixed" class="toc js-toc">
+			</nav>
+			</div>		  
 		  {% else %}
           <li><a id=subsubmenu href="{{ item_url | prepend: site.baseurl }}">{{ section.title }}</a></li>
 		  {% endif %}		  
         {% endfor %}
 {% endfor %}
-</ul>
-</li>
-</ul>
+
