--- a/_layouts/reference.html
+++ b/_layouts/reference.html
@@ -9,7 +9,7 @@ layout: defaultdev
         </div>
 
         <div class="col-md-8">
-            <div id="markdown-content-container">{{ content }}</div>
+            <div id="markdown-content-container"><div class="js-toc-content">{{ content }}</div></div>
             <br>
             <hr>
           <!-- {% include section_reference_nav.html %} -->
